notification component z-index fix

--- a/client/src/components/notification/style.module.css
+++ b/client/src/components/notification/style.module.css
@@ -6,6 +6,7 @@
   top: 0;
   bottom: 0;
   pointer-events: none;
+  z-index: 3;
 }
 
 .wrapper > .notification {
